[package]
name = "fusb302b"
version = "0.0.1"
edition = "2024"
description = "FUSB302B driver for `usbpd` library, implementing `usbpd-traits`."
documentation = "https://docs.rs/fusb302b"
repository = "https://github.com/okhsunrog/fusb302b"
homepage = "https://github.com/okhsunrog/fusb302b"
license = "MIT"
keywords = ["nostd", "usbpd", "driver", "embedded", "fusb302b"]

[lib]
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
test = false

[dependencies]
# byteorder = { version = "1.5", default-features = false }
embedded-hal-async = "1.0"
# heapless = { version = "0.8", features = ["defmt-03"] }
# paste = "1.0"
defmt = { version = "1.0", optional = true } # Or your specific version
# proc-bitfield = "0.5"
embassy-time = "0.4"
# usb-pd = { git = "https://github.com/okhsunrog/usb-pd-rs" }
usbpd-traits = "1.0.0"
device-driver = { git = "https://github.com/diondokter/device-driver", rev = "9c96f9bddf3acff63832eade5201804cd87dd00e", default-features = false, features = ["yaml"] }
# thiserror = { version = "2.0.12", default-features = false }

[features]
default = []
defmt = ["dep:defmt", "device-driver/defmt-03"] # This line declares the "defmt" feature

