[package]
name = "fusb302b"
version = "0.0.1"
edition = "2024"
description = "FUSB302B driver for `usbpd` library, implementing `usbpd-traits`, using `device-driver` crate."
documentation = "https://docs.rs/fusb302b"
repository = "https://github.com/okhsunrog/fusb302b"
homepage = "https://github.com/okhsunrog/fusb302b"
license = "MIT"
keywords = ["nostd", "usbpd", "driver", "embedded", "fusb302b", "async"]

[lib]
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
test = false
bench = false

[dependencies]
embedded-hal-async = "1.0"
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
# heapless = { version = "0.8", features = ["defmt-03"] }
embassy-time = "0.4"
usbpd-traits = { git = "https://github.com/elagil/usbpd.git", branch = "main" }
device-driver = { version = "1.0.6", default-features = false, features = ["yaml"] }
thiserror = { version = "2.0.12", default-features = false }

[features]
default = []
std = ["thiserror/std"]
log = ["dep:log"]
defmt = ["dep:defmt", "embedded-hal-async/defmt-03", "device-driver/defmt-03"]


